--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "puppeteer": "^13.5.2",
     "puppeteer-core": "^13.5.2"
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
